--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version" : "0.0.1",
   "dependencies" : {
     "node-zookeeper-client" : "*",
-    "async" : "*"
+    "async" : "*",
     "exectimer" : "*"
   }
 
